# plumpy

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  .python-version  .readthedocs.yml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  package.sh  pyproject.toml  release.sh  requirements.txt  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml  validate_release_tag.py
docs/source/: apidoc.rst  concepts.md  concepts.rst  conf.py  controller.rst  design_rationale.md  index.md  index.rst  install.rst  introduction.rst  nitpick-exceptions  quick_start.rst  tutorial.ipynb  workchain.rst
docs/source/advanced/: plumpyAPIfsm.rst  plumpyAPIprocess.rst  plumpyAPIworkchain.rst  process.md  process.rst  workchain.md  workchain.rst
docs/source/apidoc/: plum.persistence.rst  plum.rst
docs/source/basic/: concepts.rst  examples.md  introduction.md  introduction.rst  process.rst
docs/source/developing/: plumpyAPIfsm.rst  plumpyAPIprocess.rst  plumpyAPIworkchain.rst  process.rst  workchain.rst
docs/source/gettingStarted/: install.rst  quickStart.rst
docs/source/running/: concepts.rst  custom.rst  debugging.rst  introduction.rst  process.rst  workchain.rst
example/: arithemtic.py  persistence.py
examples/: process_helloworld.py  process_launch.py  process_waitAndResume.py  process_wait_and_resume.py  workchain_simple.py
plum/: __init__.py  _base.py  base_process.py  class_loader.py  communication.py  communications.py  error.py  event.py  events.py  exceptions.py  execution_engine.py  futures.py  in_memory_database.py  knowledge_base.py  knowledge_provider.py  lang.py  parallel.py  persisters.py  port.py  process.py  process_comms.py  process_controller.py  process_database.py  process_factory.py  process_listener.py  process_manager.py  process_monitor.py  process_registry.py  process_spec.py  process_states.py  processes.py  rmq.py  serial_engine.py  settings.py  simple_database.py  simple_factory.py  simple_manager.py  simple_registry.py  stack.py  test_utils.py  (+8 more)
plum/_rmq/: __init__.py  status.py
plum/base/: __init__.py  proc.py  process.py  state_machine.py  statemachine.py  utils.py
plum/engine/: execution_engine.py  parallel.py  serial.py  ticking.py
plum/loop/: __init__.py  direct_executor.py  event_loop.py  events.py  futures.py  messages.py  object.py  objects.py  persistence.py  tasks.py
plum/persistence/: __init__.py  _base.py  bundle.py  checkpoint.py  file_persistence.py  file_process_record.py  persistable.py  persistence_manager.py  persistence_mixin.py  pickle.py  pickle_persistence.py  process_record.py  util.py
plum/rmq/: __init__.py  actions.py  communicator.py  control.py  defaults.py  event.py  launch.py  messages.py  pubsub.py  status.py  util.py  utils.py
plumpy/: __init__.py  _base.py  base_process.py  class_loader.py  communications.py  events.py  exceptions.py  futures.py  lang.py  loaders.py  mixins.py  persistence.py  persisters.py  ports.py  process.py  process_comms.py  process_listener.py  process_spec.py  process_states.py  processes.py  settings.py  stack.py  test_utils.py  utils.py  version.py  workchains.py
plumpy/base/: __init__.py  state_machine.py  utils.py
src/plumpy/: __init__.py  broadcast_filter.py  communications.py  controller.py  coordinator.py  event_helper.py  events.py  exceptions.py  futures.py  greenback_bridge.py  greenlet_bridge.py  lang.py  loaders.py  message.py  mixins.py  persistence.py  ports.py  process_comms.py  process_listener.py  process_spec.py  process_states.py  processes.py  settings.py  utils.py  workchains.py
src/plumpy/base/: __init__.py  state_machine.py  utils.py
src/plumpy/rmq/: __init__.py  communications.py  coordinator.py  (+4 more)
test/: __init__.py  conftest.py  pytest.ini  test_attributesFrozendict.py  test_attributes_frozendict.py  test_base_process.py  test_class_loader.py  test_communications.py  test_event.py  test_events.py  test_executionEngine.py  test_expose.py  test_futures.py  test_inputGroupPort.py  test_input_group_port.py  test_knowledge_provider.py  test_lang.py  test_loaders.py  test_multithreadedEngine.py  test_persistence.py  test_port.py  test_process.py  test_processMonitor.py  test_processSpec.py  test_process_comms.py  test_process_manager.py  test_process_spec.py  test_processes.py  test_rmq.py  test_stack.py  test_thread_executor.py  test_util.py  test_utils.py  test_valueSpec.py  test_value_spec.py  test_wait.py  test_wait_ons.py  test_waiting_process.py  test_workchains.py  util.py  (+1 more)
test/_rmq/: test_status.py
test/base/: test_process.py  test_statemachine.py  test_utils.py
test/loop/: test_persistence.py
test/notebooks/: get_event_loop.ipynb
test/persistence/: test_inmemory.py  test_pickle.py  test_picklePersistence.py
test/process/: __init__.py  test_process_comms.py  test_process_events.py  test_process_saving.py  test_process_spec.py  test_processes.py
test/rmq/: conftest.py  docker-compose.yml  test_communicator.py  test_control.py  test_launch.py  test_process_comms.py  test_process_controller.py  test_process_thread_controller.py  test_status.py  utils.py
tests/: __init__.py  common.py  conftest.py  process.py  test_communications.py  test_coordinator.py  test_event_helper.py  test_events.py  test_executionEngine.py  test_expose.py  test_inputGroupPort.py  test_lang.py  test_message.py  test_persistence.py  test_port.py  test_process.py  test_processMonitor.py  test_processSpec.py  test_process_comms.py  test_process_listener.py  test_process_spec.py  test_process_states.py  test_processes.py  test_serialEngine.py  test_simpleFactory.py  test_simpleManager.py  test_valueSpec.py  test_wait.py  test_waiting_process.py  test_workchains.py  utils.py
tests/base/: test_statemachine.py  test_utils.py
tests/notebooks/: get_event_loop.ipynb
tests/persistence/: test_inmemory.py  test_pickle.py  test_picklePersistence.py
tests/rmq/: __init__.py  test_communications.py  test_communicator.py  test_coordinator.py  test_process_comms.py  test_process_control.py
tests/workchain/: test_steppers.py  test_workchains.py
