[build-system]
requires = ['flit_core >=3.4,<4']
build-backend = 'flit_core.buildapi'

[project]
name = 'plumpy'
dynamic = ['version']
description = 'A Python workflow library.'
authors = [
    {name = 'Martin Uhrin', email = 'martin.uhrin@gmail.com'},
    {name = 'Sebastiaan Huber'},
    {name = 'Jason Yu'},
    {name = 'Leopold Talirz'},
    {name = 'Dominik Gresch'},
]
readme = 'README.md'
license = {file = 'LICENSE.txt'}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
keywords = ['workflow', 'multithreaded', 'rabbitmq']
requires-python = '>=3.9'
dependencies = [
    'kiwipy[rmq]~=0.9.0',
    'nest_asyncio~=1.5,>=1.5.1',
    'pyyaml~=6.0',
]

[project.urls]
Home = 'https://github.com/aiidateam/plumpy'
Source = 'https://github.com/aiidateam/plumpy'
Documentation = 'https://plumpy.readthedocs.io'

# The "dev" dependency group is automatically synced by uv
# and should thus contain all necessary deps for local development.
[dependency-groups]
dev = [
  "plumpy[pre-commit,tests]"
]

[project.optional-dependencies]
docs = [
    'ipython~=7.0',
    'kiwipy[docs]~=0.9.0',
    'markupsafe==2.0.1',
    'myst-nb~=1.2.0',
    'sphinx~=7.2.0',
    'sphinx-book-theme~=1.1.4',
]
pre-commit = [
    'mypy==1.18.2',
    'pre-commit~=3.6',
    'types-pyyaml~=6.0'
]
tests = [
    'pytest~=8.4',
    'pytest-asyncio~=0.12,<0.17',
    'pytest-cov~=7.0',
    'pytest-notebook>=0.8.0',
    'shortuuid==1.0.13',
]

[tool.flit.module]
name = 'plumpy'

[tool.flit.sdist]
exclude = [
    'docs/',
    'examples/',
    'tests/',
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
ignore = [
  'F403',  # Star imports unable to detect undefined names
  'F405',  # Import may be undefined or defined from star imports
  'PLR0911',  # Too many return statements
  'PLR0912',  # Too many branches
  'PLR0913',  # Too many arguments in function definition
  'PLR0915',  # Too many statements
  'PLR2004',  # Magic value used in comparison
  'RUF005',  # Consider iterable unpacking instead of concatenation
  'RUF012'  # Mutable class attributes should be annotated with `typing.ClassVar`
]
select = [
  'E',  # pydocstyle
  'W',  # pydocstyle
  'F',  # pyflakes
  'I',  # isort
  'N',  # pep8-naming
  'PLC',  # pylint-convention
  'PLE',  # pylint-error
  'PLR',  # pylint-refactor
  'PLW',  # pylint-warning
  'FLY',  # flynt
  'RUF'  # ruff
]

[tool.mypy]
show_error_codes = true
strict = true
# reduce stricness, eventually these should be removed
disallow_any_generics = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false

[[tool.mypy.overrides]]
module = 'test.*'
check_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    'kiwipy.*',
    'nest_asyncio.*',
    'tblib.*',
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = '6.0'
testpaths = [
    'test',
]
filterwarnings = [
  "ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning::",
  "ignore:'asyncio.DefaultEventLoopPolicy' is deprecated:DeprecationWarning::",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37

[testenv]
usedevelop = true

[testenv:py{37,38,39,310}]
description = Run the unit tests
extras =
    tests
commands = pytest {posargs}

[testenv:py{37,38,39,310}-pre-commit]
description = Run the style checks and formatting
extras =
    pre-commit
    tests
commands = pre-commit run {posargs}

[testenv:docs-{update,clean}]
description = Build the documentation
extras = docs
whitelist_externals = rm
commands =
    clean: rm -rf docs/_build
    sphinx-build -nW --keep-going -b {posargs:html} docs/source/ docs/_build/{posargs:html}

[testenv:docs-live]
description = Build the documentation and launch browser (with live updates)
extras = docs
deps = sphinx-autobuild
commands =
    sphinx-autobuild \
        --re-ignore _build/.* \
        --port 0 --open-browser \
        -n -b {posargs:html} docs/source/ docs/_build/{posargs:html}
"""
